--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     
     <!-- add script tags here -->
     
-    <script src="js/app.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
